--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
 
     
 
@@ -83,11 +83,7 @@
             </div>
         </div>
     </div>
-    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
-        <a href="#next">
-            <i class="mbri-down mbr-iconfont"></i>
-        </a>
-    </div>
+    
 </section>
 
 <section class="cid-qTkAaeaxX5" id="footer1-2">
