--- a/page1.html
+++ b/page1.html
@@ -56,12 +56,12 @@
                         
                         Services
                     </a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="mailto:getampednova@gmail.com">1-Day Quote</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="page2.html#header15-a">1-Day Quote</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="timeline2 cid-rj8RuxfUBb" id="timeline2-8">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="timeline2 cid-rj8RuxfUBb" id="timeline2-8">
 
     
 
