--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
 
     
 
@@ -346,8 +346,8 @@
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://instagram.com/mobirise" target="_blank">
-                                <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
+                            <a href="https://www.instagram.com/getampednova/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                             </a>
                         </div>
                         
