create github pages

--- a/page2.html
+++ b/page2.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header15 cid-rj8SYboWMu mbr-fullscreen mbr-parallax-background" id="header15-a">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header15 cid-rj8SYboWMu mbr-fullscreen mbr-parallax-background" id="header15-a">
 
     
 
@@ -78,7 +78,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bO9MtHH4ASoRHFRAcEfQDhfRiFBiH3HfOpuCzx8BhzU8zD+QDUYIw2CEOcqdlNoQEJwdJ01BBUq0pSRsy5k4bP4f0Wd4agPo+GzpCE3yUyZ2MlS8X9zDelPZVk+zHXU+">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SqCme2HUKeB2VNlTrYN0hlpWn9vS3d97EjHxzkbxUL70pZEGRyt9Kpx4wGCFhpGMiUVlJFJUJpebrk9RQ4GbX/R92Q5QVoAQnp2sFlnh5jpCqVqeLASbl3Dsd+V85jbL">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-a">
