--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
 
     
 
@@ -84,13 +84,13 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-4 display-7">
-                     <p class="p-3"><strong>Businesses-&nbsp;</strong>M</p>
+                     <p class="p-3"><strong>Businesses-&nbsp;</strong>Boost your social media presence and gain trust with new customers by giving them an original view into your special shop, store, or service.</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-4">
-                     <p class="p-3"><strong>Events-</strong> M</p>
+                     <p class="p-3"><strong>Events-</strong>&nbsp;Whether it's a wedding, pep rally, or exposition, we've got you covered for local events big and small.</p>
                 </div>
                 <div class="col-12 col-md-4 mbr-text mbr-fonts-style display-7">
-                     <p class="p-3"><strong>Specialized Productions-</strong> M</p>
+                     <p class="p-3"><strong>Specialized Productions-</strong>&nbsp;Have a very specific production need? Want extra care taken to make your idea a reality? We're your source for extra-creative content straight from your mind.</p>
                 </div>
             </div>
         </div>
@@ -119,7 +119,7 @@
                         <div class="card-text">
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">7</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Shooting Methods</h4>
-                            <p class="mbr-content-text mbr-fonts-style display-7">Including <strong>drone footage</strong></p>
+                            <p class="mbr-content-text mbr-fonts-style display-7">Including <strong>drone footage</strong>,&nbsp;<strong>gimbal stabilization</strong>, and&nbsp;<strong>rolling vehicle shots</strong>, we have a diverse range of skills and equipment for every shoot.</p>
                         </div>
                     </div>
                 </div>
@@ -134,8 +134,7 @@
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">
                                   3840</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Maximum Resolution (4K)</h4>
-                            <p class="mbr-content-text mbr-fonts-style display-7">
-                                    C</p>
+                            <p class="mbr-content-text mbr-fonts-style display-7">The highest consumer standard, <strong>4K</strong>, available at a <strong>lower price</strong> than anywhere else.</p>
                         </div>
                     </div>
                 </div>
@@ -150,7 +149,7 @@
                                   120</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Maximum FPS</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
-                                    O</p>
+                                    Need smooth slow motion? We have the capability to slow your footage four times... and <em>still</em>&nbsp;have a<strong> higher framerate than a million-dollar car commercial.</strong></p>
                         </div>
                     </div>
                 </div>
