create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
 
     
 
@@ -87,7 +87,7 @@
                      <p class="p-3"><strong>Businesses-&nbsp;</strong>Boost your social media presence and gain trust with new customers by giving them an original view into your special shop, store, or service.</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-4">
-                     <p class="p-3"><strong>Events-</strong>&nbsp;Whether it's a wedding, pep rally, or exposition, we've got you covered for local events big and small.</p>
+                     <p class="p-3"><strong>Events-</strong>&nbsp;Whether it's a wedding, pep rally, or exposition, we've got you covered for local events big and small. We'll bring out drones and gimblas for even the smallest shoots.</p>
                 </div>
                 <div class="col-12 col-md-4 mbr-text mbr-fonts-style display-7">
                      <p class="p-3"><strong>Specialized Productions-</strong>&nbsp;Have a very specific production need? Want extra care taken to make your idea a reality? We're your source for extra-creative content straight from your mind.</p>
