--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                          <img src="assets/images/amp-logo-png-140x75.png" alt="Mobirise" title="" style="height: 4.4rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://accelerantmediaproduction.com/">
                         ACCELERANT MEDIA PRODUCTION, LLC.P</a></span>
             </div>
         </div>
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
 
     
 
