create github pages

--- a/home.html
+++ b/home.html
@@ -40,11 +40,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://accelerantmediaproduction.com/">
+                    <a href="home.html">
                          <img src="assets/images/amp-logo-png-140x75.png" alt="Mobirise" title="" style="height: 4.4rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://accelerantmediaproduction.com/">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="home.html">
                         ACCELERANT MEDIA PRODUCTION, LLC.P</a></span>
             </div>
         </div>
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
 
     
 
@@ -276,7 +276,7 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
+                    <a href="home.html">
                         <img src="assets/images/amp-logo-png-192x104.png" alt="Mobirise" title="">
                     </a>
                 </div>
