--- a/quote.html
+++ b/quote.html
@@ -38,11 +38,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://accelerantmediaproduction.com/">
+                    <a href="home.html">
                          <img src="assets/images/amp-logo-png-140x75.png" alt="Mobirise" title="" style="height: 4.4rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://accelerantmediaproduction.com/">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="home.html">
                         ACCELERANT MEDIA PRODUCTION, LLC.P</a></span>
             </div>
         </div>
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="header15 cid-rj8SYboWMu mbr-parallax-background" id="header15-a">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="header15 cid-rj8SYboWMu mbr-parallax-background" id="header15-a">
 
     
 
@@ -71,7 +71,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Thanks! We'll get your quote back to you as soon as possible!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5XJyzrrn2CvJY6rcN7qKA8iuX0NaEaKZimNwq2963knR4aODFJzoremCpRZJvMqDsu/LgCP+mg+SkE9812l2x8RHeqTAZxbK/wof44Lg6y3f8FQ7BXqtzU5mPTS6Y3V9">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YBAvv1DRPbfeWj6W384A++dern7pHvjTbSU7c+A99pgaDlw9jwXjHxZpTfz+rm7a/+gOWcg6kdJ0Gu/tQtCR9KwMgqLUVix6JCucMWeSNlnMolvTQ+lKSxxy2rPrrhfk">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-a">
