create github pages

--- a/quote.html
+++ b/quote.html
@@ -48,12 +48,12 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="1-day-quote.html#header15-a">1-Day Quote</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="quote.html">1-Day Quote</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="header15 cid-rj8SYboWMu mbr-parallax-background" id="header15-a">
+<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="header15 cid-rj8SYboWMu mbr-parallax-background" id="header15-a">
 
     
 
@@ -71,7 +71,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Thanks! We'll get your quote back to you as soon as possible!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YBAvv1DRPbfeWj6W384A++dern7pHvjTbSU7c+A99pgaDlw9jwXjHxZpTfz+rm7a/+gOWcg6kdJ0Gu/tQtCR9KwMgqLUVix6JCucMWeSNlnMolvTQ+lKSxxy2rPrrhfk">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p/hO+hZxPoV3eopMXQTgdEo6+BZ5zYUTq7AwqICEfnM/1iG8rK5bqe1ikVzeC3wYGs5kyf751Dp5uhXBwrgG8n5qerNhIWqtBALEp2R3xuKl1PYf4a7C6erAawIZEZQY">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-a">
