create github pages

--- a/quote.html
+++ b/quote.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section class="header15 cid-rj8SYboWMu mbr-parallax-background" id="header15-a">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="header15 cid-rj8SYboWMu mbr-parallax-background" id="header15-a">
 
     
 
@@ -71,7 +71,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Thanks! We'll get your quote back to you as soon as possible!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p/hO+hZxPoV3eopMXQTgdEo6+BZ5zYUTq7AwqICEfnM/1iG8rK5bqe1ikVzeC3wYGs5kyf751Dp5uhXBwrgG8n5qerNhIWqtBALEp2R3xuKl1PYf4a7C6erAawIZEZQY">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aCSiGle3lNw5Soomv4oupDYERhz5b33hRsONtokCw/FoiyXWGyRXc08sQ4h/EpM+BJb7uCsjWwOd8avvGfEYZbBFXQ1jtfB01acRgylHJjr3CMzS0oeMApaC4jiBcJ3Y">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-a">
