--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
-                         <img src="assets/images/amp-logo-png-140x75.png" alt="Mobirise" title="" style="height: 4.4rem;">
+                    <a href="https://accelerantmediaproduction.com/home">
+                         <img src="assets/images/amp-logo-png-140x75.png" alt="AMP" title="" style="height: 4.4rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://accelerantmediaproduction.com/">
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
+<section class="engine"><a href="https://accelerantmediaproduction.com/home">develop free website</a></section><section class="cid-qTkA127IK8" data-bg-video="https://www.youtube.com/watch?v=8yv7a2zwbuE" id="header2-1">
 
     
 
@@ -276,8 +276,8 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
-                        <img src="assets/images/amp-logo-png-192x104.png" alt="Mobirise" title="">
+                    <a href="https://accelerantmediaproduction.com/home">
+                        <img src="assets/images/amp-logo-png-192x104.png" alt="AMP" title="">
                     </a>
                 </div>
             </div>
