--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="page2.html#header15-a">1-Day Quote</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="quote.html">1-Day Quote</a></div>
         </div>
     </nav>
 </section>
@@ -68,7 +68,7 @@
                     ACCELERANT MEDIA PRODUCTION</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">AMP up your business, event, or project image on-site in Northern Virginia at half of the industry price, quickly and expertly.</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page2.html#header15-a">Get Started</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="quote.html">Get Started</a>
                     <a class="btn btn-md btn-white-outline display-4" href="index.html#counters4-3">Half Price?</a></div>
             </div>
         </div>
