--- a/home.html
+++ b/home.html
@@ -174,7 +174,7 @@
         <div class="media-container-row">
             <div class="media-block m-auto" style="width: 49%;">
                 <div class="mbr-figure">
-                    <img src="assets/images/mbr-1024x683.jpg" alt="" title="">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/5xOfafTfaxk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="cards-block">
